refactor(api): get /orders/fail-image?orderId={orderId} 인터페이스 수정
- get /orders/fail-image?orderId={orderId} -> /orders/{orderId}/fail-image
- 기존 검증스키마를 공통 검증 스키마 orderIdParamSchema로 교체
